--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,7 +9,7 @@ COPY --chown=node:node ./package.json ./
 RUN npm install
 COPY --chown=node:node ./ ./
 
-RUN npm run builder
+RUN npm run build
 
 FROM nginx
 EXPOSE 3000
